# my_project

./: .gitignore  README.md  pyproject.toml
my_package/: __init__.py  my_module.py
tests/: test_module.py
